Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8572

Qml2Puppet does not build with Qt 5 unless it is a developer build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 2.7.0
    • Quick Designer
    • None
    • 559851ef0c06e31b5b844d027ff3a8c500f2863c

    Description

      Qml2Puppet requires symbols with only have an AUTOTEST_EXPORT.

      So building Qml2Puppet does work with a developer build, but not with our packages.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes