src/quick/util/qquickpropertychanges_p.h
@@ -50,7 +50,7 @@ QT_BEGIN_HEADER
 QT_BEGIN_NAMESPACE
 
 class QQuickPropertyChangesPrivate;
-class Q_AUTOTEST_EXPORT QQuickPropertyChanges : public QQuickStateOperation
+class Q_QUICK_PRIVATE_EXPORT QQuickPropertyChanges : public QQuickStateOperation
 {
     Q_OBJECT
     Q_DECLARE_PRIVATE(QQuickPropertyChanges)
